src/objects/Fast_Approval_Config__c.object
<CustomObject>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fast Approval Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fast Approval Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fast Approval Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>